# simd-dft

./: CMakeLists.txt  LICENSE
src/: main.cpp  test.asm
src/dft/: dft-common.h  dft.c
src/input/: decode_audio_file.c  decode_audio_file.h
test/: main-freq-detect.c
test/dft/: common-test.c
test/input/: main-test.c
test/nasm/: main.cpp
test/samples/: mp3-encode-command.txt
